added new algorithm util bean and did some refactor of code